fix: background color in switch breaks in active
Fix focus and active conflict

--- a/src/client/components/form/switch/index.scss
+++ b/src/client/components/form/switch/index.scss
@@ -15,6 +15,9 @@
       width: 40px;
       height: 100%;
       cursor: pointer;
+      &:focus + .switch::before {
+        background-color: get-color(background, darken-1);
+      }
       @each $k, $v in map-get($colors, light) {
         &:active,
         &:checked,
@@ -49,14 +52,6 @@
         &[checked] {
           & + .switch::after {
             transform: translateX(14px);
-          }
-        }
-      }
-      &:focus {
-        &:not(:checked),
-        &:not([checked]) {
-          & + .switch::before {
-            background-color: get-color(background, darken-1);
           }
         }
       }
